--- a/app/views/users/payment/_payout_wallet_balance.html.erb
+++ b/app/views/users/payment/_payout_wallet_balance.html.erb
@@ -4,7 +4,7 @@
     <%= link_to 'Se saldo på din utbetalingskonto', payment_payout_users_path %>.
     <%= link_to 'Overfør penger til din bankkonto', payment_payout_users_path %>.
   <% else %>
-    For å motta penger må du verifisere din e-postadresse,  ditt telefonnummer og ha en
+    For å motta penger, må du verifisere din e-postadresse og ditt mobilnummer, og ha en
     gyldig bankkonto registrert hos oss.
   <% end %>
 <% end %>
