--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -152,9 +152,9 @@
         </div>
 
     <%- end -%>
-
+<hr>
         <div class="u-push-down">
-            <label>Rabattpriser</label>
+            <label>Rabattpriser:</label>
             <div data-controller="secondaryPrices" 
                  data-delete-url="<%= del_payin_rule_ad_path(@ad) %>"
                  data-fetch-url="<%= payout_rules_ad_path(@ad) %>">
