--- a/app/views/ads/_secondary_prices.html.erb
+++ b/app/views/ads/_secondary_prices.html.erb
@@ -26,7 +26,9 @@
         </div>
 
         <div>
-            <button type="button" class="button" data-delete data-id="<%= rule.id %>">Slett pris</button>
+            <%= form_for rule, url: ad_payin_rule_path(@ad, rule), method: :delete do %>
+                <button type="button" class="button" data-delete data-id="<%= rule.id %>">Slett pris</button>
+            <% end %>
         </div>
 
     </div>
