tune ad input, payin_rule form

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -183,7 +183,7 @@
                     </div>
                     <div>
                         <span class="price-adder__label">Ved utleie over</span>
-                        <%= f.telephone_field :effective_from, class: 'price-adder__effective_from' %> <!-- min="2" class="price-adder__effective_from" -->
+                        <%= f.telephone_field :effective_from, class: 'price-adder__days', min: 2 %>
                         <span>dager</span>
                     </div>
                     <div>
