Wrong case switch for market in adinput

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -46,7 +46,7 @@
 
         <%
         case @ad.category
-        when 'bap' %>
+        when 'motor' %>
             <div class="u-push-down-only">
                 <%= f.label :registration_group, 'Gruppe:' %>
                 <%= f.select( :registration_group ) do %>
