fix so payin_rule in ad input renders correctly after a new price/delete

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -157,7 +157,8 @@
 <hr>
         <div class="u-push-down">
             <label>Rabattpriser:</label>
-            <div data-controller="secondaryPrices">
+            <div data-controller="secondaryPrices"
+                 data-fetch-url="<%= ad_payin_rules_path(@ad) %>">
                 <%= render partial: 'secondary_prices' %>
             </div>
         </div>
