--- a/app/views/users/_edit_identity.html.erb
+++ b/app/views/users/_edit_identity.html.erb
@@ -39,12 +39,12 @@
                     <%= icon 'check-circle', '', class: "fa-lg u-fill-green provider-box__status" %>
                     <%= button_to identity_users_path,
                           method: :delete, params: { 'user[identity][provider]' => provider[:id] }, class: "button u-pull-right", form_class: "u-inline" do %>
-                      <%= icon 'chain-broken',  'Koble fra' %>
+                        Koble fra
                     <% end %>
                 <% else %>
                     <%= icon 'times-circle', '', class: "fa-lg u-fill-red provider-box__status" %>
                     <%= button_to user_omniauth_authorize_path(provider[:id]), class: "button u-pull-right", form_class: "u-inline" do %>
-                        <%= icon 'chain', '' %> Koble til
+                        Koble til
                     <% end %>
                 <% end %>
             </div>
