verifications no longer used

--- a/app/views/users/_verifications_list.html.erb
+++ b/app/views/users/_verifications_list.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: "gray_box", locals: {title: 'Mine verifiseringer'} do %>
+<%= render layout: "gray_box", locals: {title: 'Min dokumentasjon'} do %>
     <div class="user-verifications">
         <% @verifications.each do |v| %>
             <div class="verification-item u-push-down-only">
