--- a/app/views/application_mailer/booking_confirmed__to_owner.html.erb
+++ b/app/views/application_mailer/booking_confirmed__to_owner.html.erb
@@ -17,6 +17,10 @@
 </p>
 
 <p>
+  Forsikringsdokumenter ligger vedlagt.
+</p>
+
+<p>
   Om du har spørsmål til <%= link_to @booking.user.first_name, user_url( @booking.from_user ) %> kan du kontakte han på telefonnummer <%= @booking.user.phone_number %>.
 </p>
 <p>
@@ -24,5 +28,5 @@
 </p>
 
 <p>
-  Tips: Husk å sjekke tilstanden på tingen du leier når du møter opp og at denne samsvarer med opplysningene i annonsen.
+  <b>Viktig:</b> Du må gå over utleieobjektet sammen med utleier og se om eventuelle skader som er registret samsvarer med tilstanden på objektet. Dersom ikke, må eventuelle nye skader registreres i skadefeltet i bookingen. Leier du et kjøretøy, er det også viktig at dere registrer antall kjørte kilometer ved leiestart og leieslutt og eventuelle bompasseringer, bøter og drivstoffkostander ved leieslutt. 
 </p>
