bugfix/polish email templates/views

--- a/app/views/application_mailer/booking_confirmed__to_owner.html.erb
+++ b/app/views/application_mailer/booking_confirmed__to_owner.html.erb
@@ -21,7 +21,7 @@
 </p>
 
 <p>
-  Om du har spørsmål til <%= link_to @booking.user.first_name, user_url( @booking.from_user ) %> kan du kontakte han på telefonnummer <%= @booking.user.phone_number %>.
+  Om du har spørsmål til <%= link_to @booking.from_user.first_name, user_url( @booking.from_user ) %> kan du kontakte han på telefonnummer <%= @booking.from_user.phone_number %>.
 </p>
 <p>
   Om uthellet skulle være ute må dere huske  å fylle ut <%= link_to 'skadeskjema', users_accident_reports_url %> innen 48 timer etter skaden har skjedd.
