Remove red color from delte button - credit card

--- a/app/views/user_payment_cards/_user_payment_card.html.erb
+++ b/app/views/user_payment_cards/_user_payment_card.html.erb
@@ -1,4 +1,3 @@
-
 <tr>
   <td>
     <% if user_payment_card.card_provider == 'VISA' %>
@@ -27,7 +26,7 @@
   <td>
     <%# params: { 'user[user_payment_card][guid]' => user_payment_card.guid } %>
     <%# FIXME: evil to style directly in the html tags %>
-    <%= button_to user_payment_card, method: :delete, class: "button u-pull-right", style:"background-color:red ; color:white", form_class: "u-inline", data: { confirm: 'Are you sure?' } do %>
+    <%= button_to user_payment_card, method: :delete, class: "button u-pull-right", form_class: "u-inline", data: { confirm: 'Are you sure?' } do %>
       <%= icon 'trash', 'Slett' %>
     <% end %>
   </td>
