--- a/app/views/ads/_price_input_estimate.html.erb
+++ b/app/views/ads/_price_input_estimate.html.erb
@@ -14,7 +14,7 @@
 
         <div class="price-estimate__right">
             <label class="price-estimate__label">Pris for kunde:</label>
-            <span class="price-estimate__value"><%= format_monetary_full( calc.payin_amount(rule) ) %></span>
+            <span class="price-estimate__value"><%= format_monetary_full_pretty( calc.payin_amount(rule) ) %></span>
             <br>
 
             <% if @ad.insurance_required %>
@@ -22,11 +22,11 @@
             <% else %>
                 <label class="price-estimate__label">Leiegebyr:</label>
             <% end %>
-            <span class="price-estimate__value"><%= format_monetary_full( calc.total_fee(rule) ) %></span>
+            <span class="price-estimate__value"><%= format_monetary_full_pretty( calc.total_fee(rule) ) %></span>
             <br>
 
             <label class="price-estimate__label">Utbetalt til deg:</label>
-            <span class="price-estimate__value"><%= format_monetary_full( calc.payout_amount(rule) ) %></span>
+            <span class="price-estimate__value"><%= format_monetary_full_pretty( calc.payout_amount(rule) ) %></span>
         </div>
     <% else %>
         <div class="price-estimate__right">
