--- a/app/views/financial_transactions/_financial_transaction.html.erb
+++ b/app/views/financial_transactions/_financial_transaction.html.erb
@@ -18,6 +18,6 @@
     <small><%= financial_transaction.id %></small>
   </td>
   <td>
-    <%= format_monetary_full financial_transaction.amount %>
+    <%= format_monetary_full_pretty financial_transaction.amount %>
   </td>
 </tr>
