Added : to Pris per dag - ad

--- a/app/views/ads/_ad_payin_rules.html.erb
+++ b/app/views/ads/_ad_payin_rules.html.erb
@@ -2,7 +2,7 @@
   <h4>Priser:</h4>
   <% @ad.payin_rules.effective_from_asc.each do |pr| %>
     <% if pr.effective_from == 1 %>
-      Pris per dag <%= format_monetary_full_pretty pr.payin_amount %>
+      Pris per dag: <%= format_monetary_full_pretty pr.payin_amount %>
     <% else %>
       Ved utleie over <%= pr.effective_from %> dager reduseres prisen til <%= format_monetary_full_pretty pr.payin_amount %> per dag.
     <% end %>
