Remove some text not needed

--- a/app/views/users/_show_user_payment_account.html.erb
+++ b/app/views/users/_show_user_payment_account.html.erb
@@ -12,10 +12,9 @@
 
     <div class="row">
         <div class="eight columns">
-          bank_account_number:
           <%= @user.user_payment_account.bank_account_number %>
           <p>
-              <small>Vi trenger ditt kontonummer for å utbetale penger til deg.</small>
+              Vi trenger ditt kontonummer for å utbetale penger til deg.
           </p>
         </div>
     </div>
