Smaller text on KYC rejection

--- a/app/views/users/_verifications_list.html.erb
+++ b/app/views/users/_verifications_list.html.erb
@@ -7,7 +7,7 @@
                 </p>
                 <% if v.rejected %>
                     <p class="verification-item__rejection">
-                        <span>Årsak:</span> <%= v.rejection_reason || 'Ingen årsak gitt' %>
+                        <small><span>Årsak:</span> <%= v.rejection_reason || 'Ingen årsak gitt' %></small>
                     </p>
                 <% end %>
 
