--- a/app/views/payin_rules/_ad_price_estimate.html.erb
+++ b/app/views/payin_rules/_ad_price_estimate.html.erb
@@ -1,20 +1,29 @@
 <div class="ad-price-estimate">
-    <div class="main-price__row">
-        <span class="main-price__label">Leiegebyr: </span>
-        <span class="main-price__value">
-            <%= format_monetary_full_pretty( @ad.booking_calculator.payin_amount(@payin_rule) ) %>
-        </span>
-    </div>
-    <div class="main-price__row">
-        <i>Inkluderer forsikring opp til </i>
-        <i>
-            <%= format_monetary_full_pretty( @ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule) ) %>
-        </i>
-    </div>
-    <div class="main-price__row">
-        <strong class="main-price__label">Utebetalt til deg: </strong>
-        <strong class="main-price__value">
-        <%= format_monetary_full_pretty( @ad.booking_calculator.payout_amount(@payin_rule) ) %>
-        </strong>
-    </div>
+    <% if @payin_rule.errors.any? %>
+        TRANSLATEME: Det er ikke mulig å ha den pris, pga:
+        <ul>
+            <% @payin_rule.errors.each do |attribute,message| %>
+                <li><%= message %></li>
+            <% end %>
+        </ul>
+    <% else %>
+        <div class="main-price__row">
+            <span class="main-price__label">Leiegebyr: </span>
+            <span class="main-price__value">
+                <%= format_monetary_full_pretty( @ad.booking_calculator.total_fee(@payin_rule) ) %>
+            </span>
+        </div>
+        <div class="main-price__row">
+            <i>Inkluderer forsikring opp til </i>
+            <i>
+                <%= format_monetary_full_pretty( @ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule) ) %>
+            </i>
+        </div>
+        <div class="main-price__row">
+            <strong class="main-price__label">Utebetalt til deg: </strong>
+            <strong class="main-price__value">
+            <%= format_monetary_full_pretty( @ad.booking_calculator.payout_amount(@payin_rule) ) %>
+            </strong>
+        </div>
+    <% end %>
 </div>
