--- a/app/views/users/_public_profile_feedback.html.erb
+++ b/app/views/users/_public_profile_feedback.html.erb
@@ -6,8 +6,8 @@
     </div>
     <div class="public-profile-feedback__text-box">
         <h4>
-            <%= render 'shared/stars.html', rating: feedback.user.feedback_score %>
-            <%= feedback.ad.display_title %>
+            <%= render 'shared/stars.html', rating: feedback.score %>
+            <%= feedback.booking.ad.decorate.display_title %>
         </h4>
         <p class="public-profile-feedback__description">
             <%= feedback.body %>
