--- a/app/views/favorite_ads/_favorite_item.html.erb
+++ b/app/views/favorite_ads/_favorite_item.html.erb
@@ -1,16 +1,8 @@
-<% ad = favorite_ad.ad %>
-<div class="my-favorite-ad">
-    <div class="my-favorite-ad__img-box">
-        <%= link_to ad_path( ad ) do %>
-            <%= image_tag ad.safe_image_url(:thumb), size: '90x60', alt: '' %>
-        <% end %>
-    </div>
-
-    <div class="my-favorite-ad__text-box">
-        <h4><%= link_to ad.display_title, ad_path( ad ) %></h4>
-        <div class="my-favorite-ad__description">
-            <%= ad.summary %>
+<div>
+    <%= render layout: 'image_and_content_box', locals: {ad: favorite.ad, link: favorite.ad } do %>
+        <div>
+            <%= favorite.ad.summary %>
+            <%= button_to 'Fjern', users_favorite_ad_path(favorite.ad), method: :delete, data: { confirm: 'Sikker på at du vil fjerne?' }, form_class: 'u-inline', class: 'button u-pull-right' %>
         </div>
-        <%= button_to 'Fjern', users_favorite_ad_path(ad.id), method: :delete, data: { confirm: 'Sikker på at du vil fjerne?' }, form_class: 'u-inline', class: 'button u-pull-right u-push-down-only' %>
-    </div>
+    <% end %>
 </div>
